[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "trace_tuner"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Simon Heimler"]
license = "MIT"
description = "A minimal CLAP/VST3 tuner plugin with MIDI note output"
homepage = "https://github.com/Fannon/trace-tuner"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["rt-alloc-check"]
gui = ["dep:nih_plug_egui"]
rt-alloc-check = ["nih_plug/assert_process_allocs"]

[dependencies]
atomic_float = "1"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", optional = true }
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
